--- a/views/staff.html
+++ b/views/staff.html
@@ -8,36 +8,34 @@
 <body>
 	<nav id="logo">
         <img src="../assets/images/logo-lab.png" alt="laboratoria"> <!--logo-->
-    </nav>   
-    <section id="global"> 
-        <img id="girl" src="../assets/images/girl.jpg" alt="perfil">
-        <section class="user">
-             <div>welcome</div>
-             <div>amalia</div>
-        </section>
-        <div class="menu"><a href="views/students.html" target="_blank">alumnas</a></div>
-        <div class="menu"><a href="views/evaluations.html" target="_blank">evaluaciones</a></div>
-        <div class="menu"><a href="views/staff.html" target="_blank">staff</a></div>
-    </section>
-    <section class="option">
-        <div>sede</div>
+    </nav>  
+    <section class="option3">
 	    <select name="sede" id="sede" onchange="cargarGeneracion()">
             <option value="">Seleccione sede...</option>
         </select>
-    <div>generacion</div>
         <select name="generacion" id="generacion">
             <option value="">Seleccione generacion...</option>
         </select>
     </section>
-    <section class="click">
+    <section class="click3">
             <button type="button" name="button" onclick="promProf()">Promedio profesor</button>
             <button type="button" name="button" onclick="promJedi()">Promedio jedi</button>
+    </section> 
+    <section id="global4"> 
+        <img id="girl" src="../assets/images/girl.jpg" alt="perfil">
+        <section class="user3">
+             <div>welcome</div>
+             <div>amalia</div>
+        </section>
+        <div class="menu"><a href="../views/students.html" target="_blank">alumnas</a></div>
+        <div class="menu"><a href="../views/evaluations.html" target="_blank">evaluaciones</a></div>
+        <div class="menu"><a href="../views/staff.html" target="_blank">staff</a></div>
     </section>
-    <section id="prof">
+    <section class="p1" id="prof">
         
     </section>
     
-    <section id="jedi">
+    <section class="p2" id="jedi">
 
     </section>
     <script src="../js/data.js"></script>
