--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,24 @@ body{
     height: 100%;
     text-transform: capitalize;
 }
+#global2{
+    background-color: #2c3e50;
+    width: 20%;
+    height: 100%;
+    text-transform: capitalize;
+}
+#global3{
+    background-color: #2c3e50;
+    width: 20%;
+    height: 100%;
+    text-transform: capitalize;
+}
+#global4{
+    background-color: #2c3e50;
+    width: 20%;
+    height: 100%;
+    text-transform: capitalize;
+}
 #girl{
     border-radius: 50%;
     margin-left: 5%;
@@ -16,9 +34,25 @@ body{
 #logo{
     display: inline-block;
     float: right;
-    margin-right: 28%
+    margin-right: 28%;
 }
 .user{
+    float: right;
+    padding-top: 22%;
+    margin-right: 10%;
+    color: #ffc107;
+    text-align: center;
+    font-size: 150%;
+}
+.user2{
+    float: right;
+    padding-top: 22%;
+    margin-right: 10%;
+    color: #ffc107;
+    text-align: center;
+    font-size: 150%;
+}
+.user3{
     float: right;
     padding-top: 22%;
     margin-right: 10%;
@@ -39,6 +73,7 @@ body{
     background-color: #2c3e50;
     color: #ffc107;
     text-align: center;
+    float: right;
 }
 .staff{
     width: 20%;
@@ -46,6 +81,7 @@ body{
     background-color: #2c3e50;
     color: #ffc107;
     text-align: center;
+    float: right;
 }
 .menu{
     display: block;
@@ -53,12 +89,59 @@ body{
     padding-top: 20%;
 }
 .option{
-    width: 30%;
-    display: inline-block;
+    display: block;
     float: right;
+    margin-left: 15%;
+    margin-bottom: 25%;
+}
+.option2{
+    display: block;
+    float: right;
+    margin-left: auto;
+    margin-right: auto; 
+}
+.option3{
+    display: block;
+    float: right;
+    margin-left: auto;
+    margin-right: auto;
 }
 .click{
     display: block;
     float: right;
+    margin-left: 15%;
+    margin-bottom: 25%;
 }
-
+.click2{
+    display: block;
+    float: right;
+    margin-left: 15%;
+    margin-bottom: 25%;
+}
+.click3{
+    display: block;
+    float: right;
+    margin-left: auto;
+    margin-right: auto;
+}
+p{
+    display: inline-block;
+    margin-left: 15%;
+    margin-bottom: 5%;
+    float: right;
+}
+.p2{
+    display: inline-block;
+    margin-left: 15%;
+    margin-bottom: 5%;
+    float: right;
+}
+p3{
+    display: inline-block;
+    margin-left: 15%;
+    margin-bottom: 5%;
+    float: right;
+}
+.categorias > a:link{
+    color: #ffc107;
+}
