--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 #global{
     background-color: #2c3e50;
@@ -22,8 +23,8 @@ body{
 }
 #global4{
     background-color: #2c3e50;
-    width: 20%;
-    height: 100%;
+    width: 100%;
+    height: 20%;
     text-transform: capitalize;
 }
 #girl{
@@ -66,6 +67,7 @@ body{
     background-color: #2c3e50;
     color: #ffc107;
     text-align: center;
+    margin-left: 70px;
 }
 .evaluations{
     width: 20%;
@@ -73,7 +75,7 @@ body{
     background-color: #2c3e50;
     color: #ffc107;
     text-align: center;
-    float: right;
+    margin-left: 70px;
 }
 .staff{
     width: 20%;
@@ -81,12 +83,14 @@ body{
     background-color: #2c3e50;
     color: #ffc107;
     text-align: center;
-    float: right;
+    margin-left: 70px;
+    margin-top: 20px;
 }
 .menu{
     display: block;
-    margin-left: 30%; 
+    margin-left: 30%;
     padding-top: 20%;
+
 }
 .option{
     display: block;
@@ -98,7 +102,7 @@ body{
     display: block;
     float: right;
     margin-left: auto;
-    margin-right: auto; 
+    margin-right: auto;
 }
 .option3{
     display: block;
@@ -124,24 +128,67 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-p{
+.p{
     display: inline-block;
     margin-left: 15%;
     margin-bottom: 5%;
-    float: right;
+
 }
 .p2{
     display: inline-block;
     margin-left: 15%;
     margin-bottom: 5%;
-    float: right;
+
 }
-p3{
+.p3{
     display: inline-block;
     margin-left: 15%;
     margin-bottom: 5%;
-    float: right;
+
 }
 .categorias > a:link{
     color: #ffc107;
+}
+
+.logo-staff{
+  display: inline-block;
+  margin-left:37%;
+}
+
+.option-staff{
+  margin-top: 200px;
+
+}
+
+.click-staff{
+ margin-left: 80px;
+}
+
+.menu-staff{
+  display:inline-block;
+  margin-bottom: 100px;
+  margin-left: 50px;
+}
+
+.nav-staff{
+  background-color: #ffc107;
+  width:1363px;
+  height: 70px;
+  text-transform: capitalize;
+}
+
+table{
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+a{
+  padding-top: 20px;
+  margin-left: 240px;
+  color:black;
+}
+
+.girl-staff{
+  margin-bottom: 30px;
+  border-radius: 50px;
 }
